--- a/index.html
+++ b/index.html
@@ -3,43 +3,53 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zadanie domowe - Formularz HTML5</title>
 </head>
 
 <body>
-    <form action="https://formspree.io/f/xdoyvwao" method="POST">
-        <label for="imie">Imię:</label><br>
-        <input type="text" id="imie" name="imie"><br>
-        <label for="nazwisko">Nazwisko:</label><br>
-        <input type="text" id="nazwisko" name="nazwisko"><br>
-        <label for="mail">Mail:</label><br>
-        <input type="text" name="_replyto" placeholder="Your email" /><br>
-        <label for="telefon">Telefon:</label><br>
-        <input type="text" id="telefon" name="telefon"><br>
-        <label for="miasto">Wybór miasta:</label>
-        <select name="miasto" id="miasto">
-            <option value="Kraków">Kraków</option>
-            <option value="Warszawa">Warszawa</option>
-            <option value="Gdańsk">Gdańsk</option>
+   
+    <!-- Zadanie domowe zrob z wykorzystaniem serwisu https://formspree.io -->
+    
+    <form action="https://formspree.io/l.badocha@arena108.pl" method="POST">
+        <label for="name">Imię:</label>
+        <input type="text" name="name" id="name">
+
+        <br>
+        <label for="lastname">Nazwisko:</label>
+        <input type="text" name="lastname" id="lastname">
+
+        <br>
+        <label for="mail">E-mail:</label>
+        <input type="email" name="_replyto" id="mail">
+
+        <br>
+        <label for="phone">Telefon:</label>
+        <input type="tel" name="phone" id="phone">
+
+        <br>
+        <label for="city">Wybierz miasto:</label>
+        <select name="city" id="city">
+            <option value="krakow">Kraków</option>
+            <option value="warszawa">Warszawa</option>
+            <option value="gdansk">Gdańsk</option>
         </select>
-        <p>Płeć:</p><br>
-        <input type="radio" id="Kobieta" name="kobieta" value="Kobieta">
-        <label for="kobieta">Kobieta</label><br>
-        <input type="radio" id="Mężczyzna" name="mężczyzna" value="Mężczyzna">
-        <label for="mężczyzna">Mężczyzna</label><br>
-        <label for="zgoda">Zgoda na dane osobowe:</label><br>
-        <input type="checkbox" id="zgoda" name="zgoda" value="Zgoda"><br>
-        <label for="wiadomość">Wiadomość</label><br>
-        <textarea id="wiadomość" name="wiadomość" rows="5" cols="33">
-    </textarea>
 
-</form>
-        <input type="submit">
+        <br>
+      	<p>Wybierz płeć:</p>
+        <input type="radio" name="gender" value="male" id="male"><label for="male">Mężczyzna</label>
+        <br>
+        <input type="radio" name="gender" value="female" id="female"><label for="female">Kobieta</label>
+        <br>
 
+        <br>
+        <label for="message">Wiadomość: </label>
+        <textarea name="message" id="message"></textarea>
+        <br>
+        <input type="checkbox" id="agreement" name="agreement">
+        <label for="agreement">Wyrażam zgodę na przetwarzanie danych osobowych</label>
+        <br>
+        <input type="submit" value="Send">
     </form>
-
 </body>
 
 </html>
